--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,3 +5,14 @@ body{ padding-top: 40px;}
 	bottom:0;
 	width:100%;
 }
+
+.teste
+{
+   color: #46a546;
+   padding-left: 20px;
+
+}
+
+p{
+    padding-left: 20px;
+}
